[AP-003] Adding Exception Handler.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,8 @@ spring.h2.console.enabled=true
 
 # Custom H2 Console URL
 spring.h2.console.path=/h2
+
+
+# Error Msgs
+error.air.pro.default.msg=Something went wrong
+error.air.pro.default.code=ER0000
