--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 server.port=8084
+spring.jackson.default-property-inclusion = NON_NULL
 
 # Enabling H2 Console
 spring.h2.console.enabled=true
