[AP-005] Adding Open API Documentation - Swagger 3

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:airprodb
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.username=airpro
+spring.datasource.password=a1Rp0D#
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 server.port=8084
 spring.jackson.default-property-inclusion = NON_NULL
@@ -15,4 +15,5 @@ spring.h2.console.path=/h2
 
 # Error Msgs
 error.air.pro.default.msg=Something went wrong
+error.air.pro.invalid.flight.code.msg=Flight Code Doesn't Exists
 error.air.pro.default.code=ER0000
