--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,7 @@ spring.h2.console.path=/h2
 error.air.pro.default.msg=Something went wrong
 error.air.pro.invalid.flight.code.msg=Flight Code Doesn't Exists
 error.air.pro.default.code=ER0000
+
+error.air.pro.flight.number.is.mandate=FlightNumber is mandatory
+error.air.pro.missing.departuredate.or.arrivaldate=Departure Date or Arrival Date is missing
+error.air.pro.invalid.departuredate.or.arrivaldate=Invalid Departure Date or Arrival Date
